--- a/src/index.css
+++ b/src/index.css
@@ -295,6 +295,13 @@ button {
   text-align: center;
   margin-bottom: 3rem;
 }
+.loginLink{
+  
+  color: #00cc66;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 3rem;
+}
 
 @media (min-width: 1217px) {
   .explore {
